--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,285 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Дома6ното</title>
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<th:block th:include="~{fragments/head}"></th:block>
 <body id="page-top">
-<!-- Navigation-->
+
 <th:block th:include="~{fragments/nav}"></th:block>
-<!-- Masthead-->
+
 <header class="masthead">
     <div class="container">
-        <div class="masthead-subheading">Вашият помощник в решаването на по-трудни задачи </div>
+        <div class="masthead-subheading">Вашият помощник в решаването на по-трудни задачи от за шести клас!</div>
         <div class="masthead-heading text">Сайт за отличници ;) </div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#info">Разберете повече</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/info">Разберете повече</a>
     </div>
 </header>
-<!-- Научете повече-->
-<section class="page-section bg-light" id="info">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 mx-auto text-center">
-                <p class="large text-muted">
-                    Защо сайт за отличници? Защото този сайт ще бъде полезен за деца със знания, без  пропуски в усвояването на съоветния материал,
-                    но затрудняващи се да решат някоя от по-сложните задачи от група Б или В на сборника.
-                </p>
-                <p class="large text-muted"> Идеята дойде една събота, когато синът ми - шестокласник, пишеше поредното си домашно по математика.
-                    Помогнах му за една по-сложна задача.
-                    "Мамо, знаеш ли, много добре обясняваш. Всички ме питат къде ходя на уроци по математика и като им отговоря никъде - не ми вярват."- каза ми той.
-                    Замислих се. Както съм полезна на собственото си дете, така бих могла да бъда полезна и на други деца в тяхната подготовка.
-                </p>
-                <p class="large text-muted">
-                    Обичам математиката, завършила съм с отличен математическа гимназия, с удоволствие започнах да записвам видео решенията на задачите от сборника,
-                     по който синът ми учеше в училище. Така бе сложено началото. Дали ще продължа?
-                    От Вас зависи - ако намирате за полезно правеното от мен, ще добавям все нови и нови ресурси, не само за 6-ти но и за 7-ми и 5-ти клас.
-                </p>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Какво предлагаме-->
-<section class="page-section" id="services">
-    <div class="container">
-        <div class="text-center">
-            <h3 class="section-heading text-uppercase">Какво предлагаме</h3>
-            <p class="large text-muted">
-                Без абонамент!!!
-            </p>
-            <p class="large text-muted">
-            Имате неограничен достъп до видео решенията на всички задачи на ресурса, който сте заплатили!
-            </p>
-        </div>
-        <div class="row text-center">
-            <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-stack fa-stack-1x fa-inverse"></i>
-                        </span>
-                <h4 class="my-3">Удобство</h4>
-                <P>
-                </P>
-                <p class="text-muted">Не е необходимо да молите някой да провери или реши дадена задача. Сами може веднага да проверите вашето решение или да разгледате предложеното.
-                </p>
-            </div>
-            <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-stack fa-stack-1x fa-inverse"></i>
-                        </span>
-                <h4 class="my-3">Знания</h4>
-                <p class="text-muted">Подробните обяснения към задачите ще допълнят вашите знания. Ще получите ценни практически съвети при решаването.  </p>
-            </div>
-            <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-stack fa-stack-1x fa-inverse"></i>
-                        </span>
-                <h4 class="my-3">Спестяване </h4>
-                <p class="text-muted">Спестявате време и пари за ходене на частни уроци или консултации.</p>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Ресурси-->
-<section class="page-section bg-light" id="portfolio">
-    <!-- Page Content -->
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3">
-                <h1 class="my-4">Ресурси</h1>
-                <div class="list-group">
-                    <a href="#" class="list-group-item">За 6-ти клас</a>
-                </div>
-            </div>
-            <!-- /.col-lg-3 -->
-            <div class="col-lg-9">
-                <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner" role="listbox">
-                        <div class="carousel-item active">
-                            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="#">Item One</a>
-                                </h4>
-                                <h5>безплатно</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-                            </div>
-                            <div class="card-footer">
-                                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="#">Item Two</a>
-                                </h4>
-                                <h5>безплатно</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
-                            </div>
-                            <div class="card-footer">
-                                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="#">Item Three</a>
-                                </h4>
-                                <h5>6.99 лв.</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-                            </div>
-                            <div class="card-footer">
-                                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-                <!-- /.row -->
-
-            </div>
-            <!-- /.col-lg-9 -->
-
-        </div>
-        <!-- /.row -->
-
-    </div>
-    <!-- /.container -->
-</section>
-
-<!--<section class="page-section" id="login">-->
-<!--    <div class="container">-->
-<!--        <div class="text-center">-->
-<!--            <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Login</span></h1>-->
-<!--            <hr class="hr-3 w-25 bg-white"/>-->
-<!--            <form>-->
-<!--                <img class="mb-4" src="../assets/img/logo.png" alt="" width="200" >-->
-<!--                <h1 class="h3 mb-3 fw-normal">Please sign in</h1>-->
-<!--                <label for="inputEmail" class="visually-hidden">Email address</label>-->
-<!--                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>-->
-<!--                <label for="inputPassword" class="visually-hidden">Password</label>-->
-<!--                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>-->
-<!--                <div class="checkbox mb-3">-->
-<!--                    <label>-->
-<!--                        <input type="checkbox" value="remember-me"> Remember me-->
-<!--                    </label>-->
-<!--                </div>-->
-<!--                <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>-->
-<!--                <p class="mt-5 mb-3 text-muted">&copy; 2021</p>-->
-<!--            </form>-->
-<!--    </div>-->
-<!--    </div>-->
-<!--</section>-->
-<!--<section class="page-section" id="register">-->
-<!--    <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Register</span></h1>-->
-<!--    <hr class="hr-3 w-25 bg-white"/>-->
-<!--    <form class="mx-auto w-25 bg-blur rounded" method="" action="/" >-->
-<!--        <div class="form-group" >-->
-<!--            <div  class="label-holder textCol d-flex justify-content-center">-->
-<!--                <label for="username" class="h4 mb-2 text-white">Username</label>-->
-<!--            </div>-->
-<!--            <input type="text" class="form-control" id="username" name="username" placeholder="username" required />-->
-<!--            <small class="text-danger">Username error message</small>-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <div class="label-holder text-white textCol d-flex justify-content-center">-->
-<!--                <label for="email" class="h4 mb-2">Email</label>-->
-<!--            </div>-->
-<!--            <input type="email" class="form-control" id="email" name="email" placeholder="Email" required />-->
-
-<!--            <small class="text-danger">Email error message</small>-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <div class="label-holder text-white textCol d-flex justify-content-center">-->
-<!--                <label  for="password" class="h4 mb-2" >Password</label>-->
-<!--            </div>-->
-<!--            <input type="password" class="form-control" id="password" name="password" placeholder="Password" required />-->
-<!--            <small class="text-danger">Password error message</small>-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <div class="label-holder text-white textCol d-flex justify-content-center">-->
-<!--                <label for="confirmPassword" class="h4 mb-2">Confirm Password</label>-->
-<!--            </div>-->
-<!--            <input type="password" class="form-control" id="confirmPassword"-->
-<!--                   name="confirmPassword" placeholder="Confirm password" required/>-->
-<!--        </div>-->
-
-<!--        <div class="button-holder d-flex justify-content-center">-->
-<!--            <button type="submit" class="btn btn-warning  mb-3" value="Register">Register</button>-->
-<!--        </div>-->
-<!--    </form>-->
-<!--</section>-->
-<!-- Footer-->
-<footer class="footer py-4">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 text-lg-left">Copyright © Дома6ното 2021</div>
-            <div class="col-lg-4 my-3 my-lg-0">
-
-                <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-
-            </div>
-            <div class="col-lg-4 text-lg-right">
-                <a class="mr-3" href="#!">Privacy Policy</a>
-                <a href="#!">Terms of Use</a>
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- Bootstrap core JS-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Third party plugin JS-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-<!-- Core theme JS-->
-<script src="js/scripts.js"></script>
+<th:block th:include="~{fragments/fot}"></th:block>
 </body>
 </html>
