--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -10084,7 +10084,7 @@ img::-moz-selection {
         padding-top: 1.5rem;
         padding-bottom: 1.5rem;
         border: none;
-        background-color: transparent;
+        background-color: #212529;
         transition: padding-top 0.3s ease-in-out, padding-bottom 0.3s ease-in-out;
     }
     #mainNav .navbar-brand {
@@ -10158,89 +10158,9 @@ header.masthead .masthead-heading {
         margin-bottom: 4rem;
     }
 }
-#portfolio .portfolio-item {
-    max-width: 25rem;
-    margin-left: auto;
-    margin-right: auto;
-}
-#portfolio .portfolio-item .portfolio-link {
-    position: relative;
-    display: block;
-    margin: 0 auto;
-}
-#portfolio .portfolio-item .portfolio-link .portfolio-hover {
-    display: flex;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgba(254, 209, 54, 0.9);
-    align-items: center;
-    justify-content: center;
-    opacity: 0;
-    transition: opacity ease-in-out 0.25s;
-}
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
-    font-size: 1.25rem;
-    color: white;
-}
-#portfolio .portfolio-item .portfolio-link:hover .portfolio-hover {
-    opacity: 1;
-}
-#portfolio .portfolio-item .portfolio-caption {
-    padding: 1.5rem;
-    text-align: center;
-    background-color: #fff;
-}
-#portfolio .portfolio-item .portfolio-caption .portfolio-caption-heading {
-    font-size: 1.5rem;
-    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-weight: 700;
-    margin-bottom: 0;
-}
-#portfolio .portfolio-item .portfolio-caption .portfolio-caption-subheading {
-    font-style: italic;
-    font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
 
-.portfolio-modal .modal-dialog {
-    margin: 1rem;
-    max-width: 100vw;
-}
-.portfolio-modal .modal-content {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-    text-align: center;
-}
-.portfolio-modal .modal-content h2 {
-    font-size: 3rem;
-    line-height: 3rem;
-}
-.portfolio-modal .modal-content p.item-intro {
-    font-style: italic;
-    margin-bottom: 2rem;
-    font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-.portfolio-modal .modal-content p {
-    margin-bottom: 2rem;
-}
-.portfolio-modal .modal-content ul.list-inline {
-    margin-bottom: 2rem;
-}
-.portfolio-modal .modal-content img {
-    margin-bottom: 2rem;
-}
-.portfolio-modal .close-modal {
-    position: absolute;
-    top: 1.5rem;
-    right: 1.5rem;
-    width: 3rem;
-    height: 3rem;
-    cursor: pointer;
-    background-color: transparent;
-}
-.portfolio-modal .close-modal:hover {
-    opacity: 0.3;
-}
+
+
 
 .timeline {
     position: relative;
@@ -10425,7 +10345,7 @@ header.masthead .masthead-heading {
 
 section#contact {
     background-color: #212529;
-    background-image: url("../assets/img/map-image.png");
+    background-image: url("../img/map-image.png");
     background-repeat: no-repeat;
     background-position: center;
 }
