--- a/src/main/resources/templates/offer.html
+++ b/src/main/resources/templates/offer.html
@@ -50,7 +50,7 @@
 
                     <p class="large text-muted">Само до края на 2021 г.!</p>
                     <p></p>
-                    <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/resources/view">Към решенията</a>
+                    <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/chapter/view">Към решенията</a>
 
                 </div>
             </div>
