--- a/src/main/resources/templates/video-add.html
+++ b/src/main/resources/templates/video-add.html
@@ -13,46 +13,39 @@
             <div class="bg-white tm-block">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-block-title d-inline-block">Добавете видео</h2>
+                        <h2 class="tm-block-title d-inline-block">Добавете видео-решение</h2>
                     </div>
                 </div>
                 <div class="row mt-4 tm-edit-product-row">
                     <div class="col-xl-7 col-lg-7 col-md-12">
-                        <form action="/video/add" method="POST"
-
+                        <form th:action="@{/video/add}" method="POST" th:object="${videoAddBindingModel}"
                               class="tm-edit-product-form" >
                             <div class="input-group mb-3">
-                                <label for="resource">Изберете ресурс</label>
-                                <select name="resource" id="resource" class="custom-select">
-<!--                                    <option th:each="c : ${T(exam.exam.model.entity.GenreName).values()}" th:text="${c}" th:value="${c}" value="" selected>Select genre</option>-->
+                                <label for="chapterName">Изберете тема</label>
+                                <select name="chapterName" id="chapterName" class="custom-select">
+                                   <option th:each="e:${chapterNames}" th:text="${e}" th:value="${e}"  selected>Изберете тема</option>
                                 </select>
                             </div>
                             <div class="input-group mb-3">
-                                <label for="name" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Наименование
+                                <label for="videoName" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Наименование
                                 </label>
-                                <input  id="name" name ="name" type="text"
+                                <input th:field ="*{videoName}" id="videoName" name ="videoName" type="text"
                                        class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7"/>
-
                             </div>
                             <div class="input-group mb-3 justify-content-center">
-
-                                <small class="text-danger"></small>
+                                <small th:if="${#fields.hasErrors('videoName')}" th:errors="*{videoName}"class="text-danger">наименованието трябва да е между 11 и 20 символа</small>
 
                             </div>
                             <div class="input-group mb-3">
                                 <label for="videoUrl" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">ВидеоUrl
                                 </label>
-                                <input id="videoUrl" name="videoUrl" type="text"
+                                <input th:field ="*{videoUrl}" id="videoUrl" name="videoUrl" type="text"
                                        class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7"
                                        data-large-mode="true"/>
                             </div>
                             <div class="input-group mb-3 justify-content-center">
-
-                                <small  class="text-danger"></small>
-
+                                <small th:if="${#fields.hasErrors('videoUrl')}" th:errors="*{videoUrl}"class="text-danger">наименованието трябва да повечв от 3 символа</small>
                             </div>
-
-
                             <div class="input-group mb-3">
                                 <div class="ml-auto col-xl-8 col-lg-8 col-md-8 col-sm-7 pl-0">
                                     <button type="submit" class="btn btn-primary">Добави
