implement add rols

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -15,7 +15,7 @@
                   АДМИНИСТРИРАНЕ
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="/statistics">Statistics</a>
+                    <a class="dropdown-item" href="/roles/add">Въведи нова роля</a>
                     <a class="dropdown-item" href="/unit/add">Въведи нов раздел</a>
                     <a class="dropdown-item" href="/chapter/add">Въведи нова тема </a>
                     <a class="dropdown-item" href="/video/add">Въведи ново видео-решение</a>
